# xml-ui

./: .gitignore  .luaurc  BUILTINS.md  CHANGELOG.md  Cargo.toml  DIALOGS.md  ISS_PLAN.md  KNOWN_ISSUES.md  Makefile  PLANO_DIRETIVAS.md  PLANO_EFFECTS_UI.md  PLANO_GSS_LIMITACOES.md  PLANO_KDL.md  PLANO_LUAU_ROBUSTEZ.md  PLANO_VSCODE_EXTENSIONS.md  PLANO_WIDGETS.md  README.md  RELATORIO_0.38_A_0.40.md  ROADMAP.md
editors/vscode/: .vscodeignore  LICENSE  Makefile  README.md  language-configuration.json  package.json
editors/vscode-gv/: Makefile  README.md  extension.js  language-configuration.json  package.json
editors/vscode-gv/references/: glacier-view.md
editors/vscode-gv/syntaxes/: glacier-view.tmLanguage.json
editors/vscode/snippets/: gss.code-snippets
editors/vscode/syntaxes/: gss.tmLanguage.json
examples/: condicional.rs  contador_macro.rs  dialogs.rs  estilos.rs  formulario_login.rs  lista_reordenavel.rs  perfil.rs  toasts.rs
examples/aninhado/: cartao_contador.xml  main.rs  painel.gv  painel.xml
examples/bandeja/: main.rs  painel.gv
examples/builtins/: main.rs
examples/condicional/: condicional.gv  main.rs
examples/contador/: contador.xml  main.rs
examples/contador_externo/: contador_externo.gv  contador_externo.luau  main.rs
examples/contador_macro/: contador_macro.gv  contador_macro.xml  main.rs
examples/dialogs/: dialogs.gv  main.rs
examples/estilos/: app.gss  estilos.gv  estilos.xml  main.rs
examples/estilos_inline/: estilos_inline.gv  estilos_inline.xml  main.rs
examples/fetch_luau/: fetch_luau.xml  main.rs
examples/formulario_login/: formulario_login.gv  main.rs
examples/galeria_estilos/: galeria.gv
examples/imports_luau/: app.gv  main.rs  script.luau
examples/imports_luau/net/: http_client.luau
examples/imports_luau/util/: strings.luau
examples/janelas_glacier/: detalhe.gv  main.rs  painel.gv
examples/janelas_iced/: main.rs
examples/lista/: cartao_usuario.gv  lista_usuarios.gv  lista_usuarios.xml  main.rs
examples/lista_reordenavel/: lista_reordenavel.xml  main.rs
examples/navegacao/: main.rs  nav_config.gv  nav_home.gv  nav_perfil.gv
examples/navegacao_luau/: dashboard.gv  login.gv  main.rs
examples/perfil/: main.rs  perfil.gv  perfil.xml  perfil_card.xml
examples/pseudo_estados/: main.rs  pseudo_estados.gss  pseudo_estados.gv
examples/robustez_luau/: main.rs  robustez.gv
examples/stream_lua/: main.rs  stream_local.lua  stream_local.xml  stream_lua.lua  stream_lua.xml
examples/toasts/: main.rs  toasts.xml
glacier-ui-macros/: Cargo.toml
src/: app.rs  asset_source.rs  builtins.rs  component.rs  daemon.rs  dialogs.rs  error.rs  eval.rs  forms.rs  kdl_parser.rs  lib.rs  lua.rs  net.rs  parser.rs  render_inputs.rs  stylesheet.rs  toasts.rs  tray.rs  widget.rs
src/builtins/: badge.rs  mod.rs
src/luau/: mod.rs  prelude.luau
styles/: app.gss  app.iss  estilos.iss  theme.json
templates/: cartao_contador.xml  condicional.xml  condicional_attr.xml  contador_macro.xml  dialogs.kdl  estilos.xml  formulario_login.kdl  lista_reordenavel.kdl  perfil_card.xml  toasts.kdl
tests/: engine_tests.rs  xml_multi_root_fragment.rs
tests/fixtures/rustploy_remote_ui/: app.kdl  home.kdl  login.kdl  service.kdl  shell.kdl
xml-ui-macros/: Cargo.toml
xml-ui-macros/src/: lib.rs
