[package]
name = "glacier-ui"
version = "0.4.14"
edition = "2024"
description = "Declarative UI engine for Rust: render UI from KDL (or XML) to iced, with hot-reload, data binding, components and .gss stylesheets."
license = "MIT OR Apache-2.0"
repository = "https://github.com/antoniofernandodj/xml-ui"
readme = "README.md"
keywords = ["gui", "ui", "iced", "kdl", "declarative"]
categories = ["gui"]

[workspace]
members = ["glacier-ui-macros"]

[dependencies]
iced = { version = "0.14", features = ["image", "svg", "tokio"] }
roxmltree = "0.21"
kdl = "6"
image = "0.25"
serde_json = "1.0"
regex = "1"
glacier-ui-macros = { path = "glacier-ui-macros", version = "0.1.0" }
