[package]
name = "glacier-ui"
version = "0.34.0"
edition = "2024"
description = "Declarative UI engine for Rust: render UI from XML to iced, with hot-reload, data binding, components and .gss stylesheets."
license = "MIT OR Apache-2.0"
repository = "https://github.com/antoniofernandodj/xml-ui"
readme = "README.md"
keywords = ["gui", "ui", "iced", "xml", "declarative"]
categories = ["gui"]

[dependencies]
iced = { version = "0.14", features = ["image", "svg", "tokio"] }
roxmltree = "0.21"
image = "0.25"
serde_json = "1.0"
regex = "1"
mlua = { version = "0.11.6", features = ["luau", "vendored", "serialize"] }
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1.3"
tokio = { version = "1.52.3", features = ["rt", "net", "io-util", "time"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["ring", "webpki-roots", "http1"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std"] }
futures = "0.3"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
