[package]
name = "glacier-ui"
version = "0.50.0"
edition = "2024"
description = "Declarative UI engine for Rust: render UI from XML to iced, with hot-reload, data binding, components and .gss stylesheets."
license = "MIT OR Apache-2.0"
repository = "https://github.com/antoniofernandodj/xml-ui"
readme = "README.md"
keywords = ["gui", "ui", "iced", "xml", "declarative"]
categories = ["gui"]

[dependencies]
iced = { version = "0.14", features = ["image", "svg", "tokio"] }
roxmltree = "0.21"
image = "0.25"
serde_json = "1.0"
regex = "1"
mlua = { version = "0.11.6", features = ["luau", "vendored", "serialize"] }
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1.3"
tokio = { version = "1.52.3", features = ["rt", "net", "io-util", "time", "fs"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["ring", "webpki-roots", "http1"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std"] }
futures = "0.3"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
# Notificações nativas do SO (freedesktop/D-Bus no Linux/BSD via zbus puro-Rust,
# NSUserNotification no macOS, toast WinRT no Windows). Usado por `notify()` na
# camada Luau — ver Context::notify.
notify-rust = "4.18"

# ── Bandeja (system tray) — opcional, atrás da feature `tray` ────────────────
# Só compila quando um app pede `.tray(...)` E habilita `features = ["tray"]`;
# assim quem não usa bandeja não arrasta GTK/tray-icon. No Linux a bandeja usa
# libappindicator+GTK, e a thread dedicada precisa do `gtk` para inicializar e
# rodar o loop GTK; no Windows, do `windows-sys` para o message-loop Win32. macOS
# não é suportado (exige a thread principal). Ver `src/tray.rs`.
[dependencies.tray-icon]
version = "0.24"
optional = true

[target.'cfg(target_os = "linux")'.dependencies.gtk]
version = "0.18"
optional = true

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59"
features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"]
optional = true

[features]
# Habilita o ícone de bandeja e o app que sobrevive à última janela. `dep:gtk` e
# `dep:windows-sys` são deps por-alvo: a ativação é no-op nos alvos onde não
# existem, então a feature é a mesma nas três plataformas.
tray = ["dep:tray-icon", "dep:gtk", "dep:windows-sys"]
